src/render/snapshots/webgit__render__readme__tests__readme_html_markdown_frame.snap
---
source: src/render/readme.rs
expression: "render(ReadmeProps\n{\n    content:\n    Some(ReadmeContent::Markdown(markdown_to_html(\"# webgit\\n\\nA *client-side* Git viewer.\\n\\n\\\n                 | a | b |\\n|---|---|\\n| 1 | 2 |\\n\",\n    &link_base(),))),\n})"
---
<iframe title="README" height="150" sandbox="allow-same-origin allow-top-navigation-by-user-activation" srcdoc="&lt;!doctype html&gt;&lt;html lang=&quot;en&quot;&gt;&lt;head&gt;&lt;meta charset=&quot;utf-8&quot;&gt;&lt;base target=&quot;_top&quot;&gt;&lt;link rel=&quot;stylesheet&quot; href=&quot;&quot;&gt;&lt;/head&gt;&lt;body class=&quot;markdown-body&quot;&gt;&lt;h1&gt;webgit&lt;/h1&gt;
&lt;p&gt;A &lt;em&gt;client-side&lt;/em&gt; Git viewer.&lt;/p&gt;
&lt;table&gt;
&lt;thead&gt;
&lt;tr&gt;
&lt;th&gt;a&lt;/th&gt;
&lt;th&gt;b&lt;/th&gt;
&lt;/tr&gt;
&lt;/thead&gt;
&lt;tbody&gt;
&lt;tr&gt;
&lt;td&gt;1&lt;/td&gt;
&lt;td&gt;2&lt;/td&gt;
&lt;/tr&gt;
&lt;/tbody&gt;
&lt;/table&gt;
&lt;/body&gt;&lt;/html&gt;" class="markdown-frame">
</iframe>
