src/render/snapshots/webgit__render__readme__tests__readme_html_missing.snap
---
source: src/render/readme.rs
expression: "render(ReadmeProps { file: None })"
---
<p class="msg">No README found.</p>
