src/render/snapshots/webgit__render__readme__tests__readme_html_plain.snap
---
source: src/render/readme.rs
expression: "render(ReadmeProps\n{\n    content:\n    Some(ReadmeContent::Plain(\"webgit\\n\\nA client-side Git viewer.\\n\".to_string())),\n})"
---
<pre class="readme">webgit

A client-side Git viewer.
</pre>
