src/render/snapshots/webgit__render__readme__tests__readme_html_plain_escapes_markup.snap
---
source: src/render/readme.rs
expression: "render(ReadmeProps\n{\n    content:\n    Some(ReadmeContent::Plain(\"<script>alert(1)</script> & <b>bold</b>\\n\".to_string())),\n})"
---
<pre class="readme">&lt;script&gt;alert(1)&lt;/script&gt; &amp; &lt;b&gt;bold&lt;/b&gt;
</pre>
